Replaced placeholder img

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <h1>Projects</h1>
     <div class="card-list">
       <div class="card">
-        <img src="res/placeholder-256.png" alt="">
+        <img src="https://raw.githubusercontent.com/nikhilmwarrier/fluidcss/main/docs/res/FluidCSS_256.png" alt="">
         <h3>FluidCSS</h3>
         <p>A CSS library for Rapid Prototypers</p>
         <a href="/fluidcss" class="card-cta">View</a>
